--- a/DFWatch/Pages/LogPage.xaml
+++ b/DFWatch/Pages/LogPage.xaml
@@ -2,7 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:DFWatch"
+      xmlns:dfw="clr-namespace:DFWatch"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" d:DesignHeight="450"
@@ -17,7 +17,7 @@
 
     <!--#region Page Resources-->
     <Page.Resources>
-        <local:ColorConverter x:Key="ColorConverter" />
+        <dfw:ColorConverter x:Key="ColorConverter" />
     </Page.Resources>
     <!--#endregion-->
 
@@ -91,7 +91,7 @@
                    HorizontalAlignment="Right"
                    FontSize="15" FontWeight="DemiBold"
                    Text="{Binding Count,
-                                  Source={x:Static local:MsgQueue.MessageQueue}}"
+                                  Source={x:Static dfw:MsgQueue.MessageQueue}}"
                    ToolTip="Message Count" />
         <!--#endregion-->
 
@@ -101,7 +101,7 @@
                  BorderBrush="{DynamicResource MaterialDesignDivider}"
                  BorderThickness="1.25"
                  IsSynchronizedWithCurrentItem="True"
-                 ItemsSource="{x:Static local:MsgQueue.MessageQueue}"
+                 ItemsSource="{x:Static dfw:MsgQueue.MessageQueue}"
                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                  ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ListBox.ItemContainerStyle>
