--- a/DFWatch/App.xaml
+++ b/DFWatch/App.xaml
@@ -1,100 +1,21 @@
 ﻿<Application x:Class="DFWatch.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:dfw="clr-namespace:DFWatch"
-             xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:system="clr-namespace:System;assembly=mscorlib"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <md:BundledTheme BaseTheme="Dark"
-                                 ColorAdjustment="{md:ColorAdjustment}"
-                                 PrimaryColor="Blue" SecondaryColor="Red" />
+                <materialDesign:BundledTheme BaseTheme="Dark"
+                                             ColorAdjustment="{materialDesign:ColorAdjustment}"
+                                             PrimaryColor="Blue" SecondaryColor="DeepOrange" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.PopupBox.xaml" />
+                <ResourceDictionary Source="Styles/ButtonStyles.xaml" />
+                <ResourceDictionary Source="Styles/DataProviders.xaml" />
+                <ResourceDictionary Source="Styles/DataTemplates.xaml" />
+                <ResourceDictionary Source="Styles/ScrollBarStyle.xaml" />
+                <ResourceDictionary Source="Styles/NavigationStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
-
-            <!--#region  Style to change the height of the items in the navigation panel-->
-            <Style TargetType="ListBoxItem"
-                   x:Key="NavPaneListBoxItem"
-                   BasedOn="{StaticResource {x:Type ListBoxItem}}">
-                <Setter Property="Height" Value="50" />
-                <Setter Property="MinWidth" Value="150" />
-                <Setter Property="Padding" Value="20,0,20,0" />
-            </Style>
-            <!--#endregion-->
-
-            <!--#region Navigation ListBox Style-->
-            <Style TargetType="ListBox"
-                   x:Key="NavListBox"
-                   BasedOn="{StaticResource {x:Type ListBox}}">
-                <Setter Property="FontFamily" Value="Segoe UI" />
-                <Setter Property="FontSize" Value="15" />
-            </Style>
-            <!--#endregion-->
-
-            <!--#region Style for the page headers-->
-            <Style TargetType="TextBlock"
-                   x:Key="PageHeader">
-                <Setter Property="FontSize" Value="17" />
-                <Setter Property="FontWeight" Value="Bold" />
-                <Setter Property="Padding" Value="10,2" />
-            </Style>
-            <!--#endregion-->
-
-            <!--#region Style the scrollbar-->
-            <Style TargetType="ScrollBar"
-                   BasedOn="{StaticResource MaterialDesignScrollBarMinimal}" />
-            <!--#endregion-->
-
-            <!--#region Style to enable thicker separators in the nav menu-->
-            <Style TargetType="Separator">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type Separator}">
-                            <Rectangle Height="{TemplateBinding Height}"
-                                       Fill="{DynamicResource PrimaryHueMidBrush}" />
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-            <!--#endregion-->
-
-            <!--#region Style for CheckBoxes on the settings page-->
-            <Style TargetType="CheckBox"
-                   BasedOn="{StaticResource MaterialDesignCheckBox}">
-                <Setter Property="Margin" Value="5,0" />
-                <Setter Property="Padding" Value="10,0" />
-                <Setter Property="md:CheckBoxAssist.CheckBoxSize" Value="25" />
-            </Style>
-            <!--#endregion-->
-
-            <!--#region Data providers for enums on the settings page-->
-            <ObjectDataProvider x:Key="enumAccentColors"
-                                MethodName="GetValues"
-                                ObjectType="{x:Type system:Enum}">
-                <ObjectDataProvider.MethodParameters>
-                    <x:Type TypeName="dfw:AccentColor" />
-                </ObjectDataProvider.MethodParameters>
-            </ObjectDataProvider>
-
-            <ObjectDataProvider x:Key="enumThemeType"
-                                MethodName="GetValues"
-                                ObjectType="{x:Type system:Enum}">
-                <ObjectDataProvider.MethodParameters>
-                    <x:Type TypeName="dfw:ThemeType" />
-                </ObjectDataProvider.MethodParameters>
-            </ObjectDataProvider>
-
-            <ObjectDataProvider x:Key="enumUISize"
-                                MethodName="GetValues"
-                                ObjectType="{x:Type system:Enum}">
-                <ObjectDataProvider.MethodParameters>
-                    <x:Type TypeName="dfw:MySize" />
-                </ObjectDataProvider.MethodParameters>
-            </ObjectDataProvider>
-            <!--#endregion-->
 
         </ResourceDictionary>
     </Application.Resources>
